--- a/index.html
+++ b/index.html
@@ -3,101 +3,148 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mahin Rahman Digital Card</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <title>Mahin Rahman - mahin0o0</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 20px;
+      background: linear-gradient(to right, #e0eafc, #cfdef3);
+      font-family: 'Segoe UI', sans-serif;
     }
-    .card {
-      max-width: 400px;
-      margin: auto;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    #cover {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      background: url('cover.jpeg') no-repeat center center/cover;
+    }
+    #cover h1 {
+      background-color: rgba(255,255,255,0.8);
       padding: 20px;
+      border-radius: 15px;
+      cursor: pointer;
+      font-size: 3rem;
+    }
+    .info-section {
+      display: none;
+      padding: 50px;
       text-align: center;
     }
-    .toggle-btn {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      margin-top: 10px;
-      cursor: pointer;
-      border-radius: 5px;
+    .admin-login, .customizer-panel {
+      max-width: 500px;
+      margin: 50px auto;
+      padding: 30px;
+      background-color: #ffffff;
+      border-radius: 15px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     }
-    .info {
-      margin-top: 20px;
-      line-height: 1.8;
-    }
-    .social-links i {
-      font-size: 24px;
-      margin: 10px;
-      color: #333;
-    }
-    .social-links a:hover i {
-      color: #007bff;
+    input[type="file"] {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h2 id="name">Mahin Rahman</h2>
-    <div class="info" id="info">
-      <p><strong>Date of Birth:</strong> 15 Dec 2005</p>
-      <p><strong>Address:</strong> Uttargram-111, Dhanpur, Dakshin Gopal (Part), Sylhet</p>
-      <p><strong>Blood Group:</strong> O+</p>
-      <p><strong>Institute:</strong> Headway Engineering Institute</p>
-      <p><strong>Department:</strong> Computer</p>
-      <p><strong>Session:</strong> 2024–25</p>
-      <p><strong>Valid Till:</strong> 2029</p>
+  <section id="cover">
+    <img src="photo.jpeg" alt="Mahin Rahman Photo" class="rounded-circle mb-3" width="150" height="150" />
+    <h1 id="name-touch">Mahin Rahman</h1>
+  </section>
+
+  <section id="bio" class="info-section">
+    <h2>Bio</h2>
+    <p>Name: Mahin Rahman</p>
+    <p>Username: mahin0o0</p>
+    <p>Father: [Add Later]</p>
+    <p>Mother: [Add Later]</p>
+    <p>Location: Sylhet, Bangladesh</p>
+    <button onclick="goToNext('education')" class="btn btn-primary">Next Information for Education Life</button>
+  </section>
+
+  <section id="education" class="info-section">
+    <h2>Education Life</h2>
+    <p>Institute: Headway Engineering Institute</p>
+    <p>Student ID: 248531</p>
+    <p>Department: Computer</p>
+    <p>Session: 2024-25</p>
+    <p>Validity: 2029</p>
+    <button onclick="goToNext('work')" class="btn btn-primary">Next Information for Work Life</button>
+  </section>
+
+  <section id="work" class="info-section">
+    <h2>Work Life</h2>
+    <p>(To be added later)</p>
+    <button onclick="goToNext('social')" class="btn btn-primary">Next Information for Social Media</button>
+  </section>
+
+  <section id="social" class="info-section">
+    <h2>Social Media</h2>
+    <div class="d-flex flex-column align-items-center gap-2">
+      <a href="https://www.facebook.com/share/167HMiKwGM/" class="btn btn-outline-dark" target="_blank">Facebook</a>
+      <a href="https://www.instagram.com/mahin0o0/profilecard/?igsh=MWI0ZXk1ejJjaTM2bw==" class="btn btn-outline-danger" target="_blank">Instagram</a>
+      <a href="https://www.tiktok.com/@mahin0o0?_t=ZS-8w4GhTuUH4c&_r=1" class="btn btn-outline-dark" target="_blank">TikTok</a>
+      <a href="https://www.threads.net/@mahin0o0" class="btn btn-outline-dark" target="_blank">Threads</a>
+      <a href="https://www.youtube.com/@Mahin.0o0" class="btn btn-outline-danger" target="_blank">YouTube</a>
+      <a href="tel:01770756964" class="btn btn-outline-success">WhatsApp</a>
+      <a href="mailto:mahinrahman13140@gmail.com" class="btn btn-outline-info">Email</a>
     </div>
-    <div class="social-links">
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-tiktok"></i></a>
-      <a href="#"><i class="fab fa-threads"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
+    <button onclick="goToNext('motivation')" class="btn btn-primary mt-4">Next Information for You</button>
+  </section>
+
+  <section id="motivation" class="info-section">
+    <h2>Motivational Message</h2>
+    <p>Success doesn’t come from what you do occasionally. It comes from what you do consistently.</p>
+    <p>Believe in yourself. Work hard. Be kind. Stay focused.</p>
+    <h4 class="mt-4">Thank You</h4>
+    <button onclick="goToNext('locker')" class="btn btn-secondary mt-3">Go to My Locker</button>
+  </section>
+
+  <section id="locker" class="info-section">
+    <div class="admin-login">
+      <h3>My Locker (Admin Panel)</h3>
+      <input type="password" id="lockerPassword" placeholder="Enter Password" class="form-control mb-3" />
+      <button onclick="checkLockerAccess()" class="btn btn-success w-100">Unlock</button>
+      <p class="mt-3"><a href="#" onclick="alert('Password reset instructions will be sent to: mahinrahman13140@gmail.com and 01770756964')">Forgot Password?</a></p>
+      <div id="lockerAccess" style="display:none;">
+        <div class="customizer-panel">
+          <h4>Customize Your Website</h4>
+          <label>Profile Picture:</label>
+          <input type="file" class="form-control" />
+          <label>Cover Photo:</label>
+          <input type="file" class="form-control" />
+          <label>Background Theme:</label>
+          <input type="color" class="form-control" />
+          <label>Add New Bio Details:</label>
+          <textarea class="form-control" rows="3"></textarea>
+          <label>Add New Page:</label>
+          <input type="text" placeholder="Page Name" class="form-control" />
+          <button class="btn btn-info w-100 mt-2">Add Page</button>
+          <label class="mt-3">Upload Public Video:</label>
+          <input type="file" class="form-control" />
+          <label>Upload Personal Video:</label>
+          <input type="file" class="form-control" />
+          <button class="btn btn-outline-danger mt-3">Change Password</button>
+        </div>
+      </div>
     </div>
-    <button class="toggle-btn" onclick="toggleLanguage()">বাংলা</button>
-  </div>
+  </section>
 
   <script>
-    const info = document.getElementById("info");
-    const btn = document.querySelector(".toggle-btn");
-    let isEnglish = true;
+    function goToNext(sectionId) {
+      document.querySelectorAll('.info-section').forEach(s => s.style.display = 'none');
+      document.getElementById(sectionId).style.display = 'block';
+    }
 
-    function toggleLanguage() {
-      if (isEnglish) {
-        info.innerHTML = `
-          <p><strong>জন্ম তারিখ:</strong> ১৫ ডিসেম্বর ২০০৫</p>
-          <p><strong>ঠিকানা:</strong> উত্তরগ্রাম-১১১, ধানপুর, দক্ষিণ গোপাল (পার্ট), সিলেট</p>
-          <p><strong>রক্তের গ্রুপ:</strong> O+</p>
-          <p><strong>প্রতিষ্ঠান:</strong> হেডওয়ে ইঞ্জিনিয়ারিং ইনস্টিটিউট</p>
-          <p><strong>বিভাগ:</strong> কম্পিউটার</p>
-          <p><strong>শিক্ষাবর্ষ:</strong> ২০২৪–২৫</p>
-          <p><strong>মেয়াদ:</strong> ২০২৯</p>
-        `;
-        btn.textContent = "English";
+    document.getElementById('name-touch').addEventListener('click', () => goToNext('bio'));
+    document.querySelectorAll('.info-section').forEach(s => s.style.display = 'none');
+
+    function checkLockerAccess() {
+      const pass = document.getElementById('lockerPassword').value;
+      if (pass === '24578mahin1318914rahman') {
+        document.getElementById('lockerAccess').style.display = 'block';
       } else {
-        info.innerHTML = `
-          <p><strong>Date of Birth:</strong> 15 Dec 2005</p>
-          <p><strong>Address:</strong> Uttargram-111, Dhanpur, Dakshin Gopal (Part), Sylhet</p>
-          <p><strong>Blood Group:</strong> O+</p>
-          <p><strong>Institute:</strong> Headway Engineering Institute</p>
-          <p><strong>Department:</strong> Computer</p>
-          <p><strong>Session:</strong> 2024–25</p>
-          <p><strong>Valid Till:</strong> 2029</p>
-        `;
-        btn.textContent = "বাংলা";
+        alert('Incorrect password!');
       }
-      isEnglish = !isEnglish;
     }
   </script>
 </body>
 </html>
-
