--- a/index.html
+++ b/index.html
@@ -1,125 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mahin Rahman | Digital Identity</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css"/>
-  <style>
-    /* Glassmorphic background */
-    .glass {
-      background: rgba(255,255,255,0.15);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255,255,255,0.3);
-    }
-    /* Animated gradient header */
-    .animated-gradient {
-      background: linear-gradient(90deg,#1864ab,#00ffe1,#1864ab);
-      background-size: 200% 200%;
-      animation: pulseBg 5s ease infinite;
-    }
-    @keyframes pulseBg {
-      0%{background-position:0% 50%;}
-      50%{background-position:100% 50%;}
-      100%{background-position:0 50%;}
-    }
-  </style>
-</head>
-<body class="bg-gradient-to-br from-blue-50 to-white min-h-screen flex flex-col items-center">
+<!-- SOCIAL ICONS (Clean, Responsive, Official) -->
+<section class="text-center mb-8">
+  <h3 class="text-xl font-semibold text-blue-700 mb-4">Find Me Online</h3>
+  <div class="flex flex-wrap justify-center gap-4">
+    
+    <!-- Facebook Profile -->
+    <a href="https://facebook.com/mahin.rahman.757258" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Facebook">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" class="w-6 h-6" alt="Facebook">
+    </a>
 
-  <!-- HEADER -->
-  <header class="w-full animated-gradient py-8 shadow-lg mb-6">
-    <h1 class="text-4xl md:text-5xl text-white font-extrabold text-center">Mahin Rahman</h1>
-    <p class="text-white/90 text-center mt-2">Aspiring Technologist & Devoted Teacher</p>
-  </header>
+    <!-- Facebook Page -->
+    <a href="https://www.facebook.com/share/1ZFyeuJF3G/" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Facebook Page">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" class="w-6 h-6" alt="FB Page">
+    </a>
 
-  <main class="w-full max-w-3xl mx-auto px-4">
+    <!-- Instagram -->
+    <a href="https://instagram.com/mahin0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Instagram">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" class="w-6 h-6" alt="Instagram">
+    </a>
 
-    <!-- PROFILE COVER -->
-    <section class="relative glass p-6 rounded-xl shadow-lg flex flex-col md:flex-row items-center gap-6 mb-8">
-      <img src="https://avatars.githubusercontent.com/u/MAHIN_GITHUB_ID" alt="Profile" class="w-32 h-32 rounded-full border-4 border-white shadow"/>
-      <div>
-        <h2 class="text-2xl font-semibold text-blue-900">Hi, I'm Mahin Rahman</h2>
-        <p class="mt-2 text-gray-800">Student at <a href="http://www.headway.edu.bd" class="text-blue-600 underline" target="_blank">Headway Engineering Institute</a>, Sylhet</p>
-        <p class="mt-1 text-gray-800">Teacher at <a href="https://www.facebook.com/profile.php?id=100063620542119" class="text-blue-600 underline" target="_blank">Sylhet Art and Culture Institute</a></p>
-      </div>
-    </section>
+    <!-- TikTok -->
+    <a href="https://tiktok.com/@mahin0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="TikTok">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" class="w-6 h-6" alt="TikTok">
+    </a>
 
-    <!-- SOCIAL LINKS -->
-    <section class="text-center mb-8">
-      <h3 class="text-xl font-semibold text-blue-700 mb-4">Connect with Me</h3>
-      <div class="flex justify-center flex-wrap gap-4">
-        <!-- Facebook Personal -->
-        <a href="https://www.facebook.com/mahin.rahman.757258" target="_blank" class="p-3 glass rounded-full shadow hover:scale-110 transition">
-          <img src="https://simpleicons.org/icons/facebook.svg" alt="Facebook" class="w-6 h-6"/>
-        </a>
-        <!-- Facebook Institute -->
-        <a href="https://www.facebook.com/share/1ZFyeuJF3G/" target="_blank" class="p-3 glass rounded-full shadow hover:scale-110 transition">
-          <img src="https://simpleicons.org/icons/facebook.svg" alt="Institute FB" class="w-6 h-6"/>
-        </a>
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/mahin0o0" target="_blank" class="p-3 glass rounded-full shadow hover:scale-110 transition">
-          <img src="https://simpleicons.org/icons/instagram.svg" alt="Instagram" class="w-6 h-6"/>
-        </a>
-        <!-- TikTok -->
-        <a href="https://www.tiktok.com/@mahin0o0" target="_blank" class="p-3 glass rounded-full shadow hover:scale-110 transition">
-          <img src="https://simpleicons.org/icons/tiktok.svg" alt="TikTok" class="w-6 h-6"/>
-        </a>
-        <!-- YouTube -->
-        <a href="https://www.youtube.com/@MahinRahman0o0" target="_blank" class="p-3 glass rounded-full shadow hover:scale-110 transition">
-          <img src="https://simpleicons.org/icons/youtube.svg" alt="YouTube" class="w-6 h-6"/>
-        </a>
-        <!-- WhatsApp -->
-        <a href="https://wa.me/8801770756964" target="_blank" class="p-3 glass rounded-full shadow hover:scale-110 transition">
-          <img src="https://simpleicons.org/icons/whatsapp.svg" alt="WhatsApp" class="w-6 h-6"/>
-        </a>
-        <!-- Email -->
-        <a href="mailto:mahinrahman13140@gmail.com" class="p-3 glass rounded-full shadow hover:scale-110 transition">
-          <img src="https://simpleicons.org/icons/gmail.svg" alt="Email" class="w-6 h-6"/>
-        </a>
-        <!-- GitHub -->
-        <a href="https://github.com/mahin0o0" target="_blank" class="p-3 glass rounded-full shadow hover:scale-110 transition">
-          <img src="https://simpleicons.org/icons/github.svg" alt="GitHub" class="w-6 h-6"/>
-        </a>
-      </div>
-    </section>
+    <!-- YouTube -->
+    <a href="https://www.youtube.com/@MahinRahman0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="YouTube">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" class="w-6 h-6" alt="YouTube">
+    </a>
 
-    <!-- INFO CARDS -->
-    <section class="grid sm:grid-cols-2 gap-6 mb-8">
-      <div class="glass p-6 rounded-xl shadow-lg">
-        <h4 class="text-lg font-semibold text-blue-800 mb-4">🎓 Education</h4>
-        <ul class="text-gray-800 space-y-2">
-          <li><b>Institute:</b> Headway Engineering Institute</li>
-          <li><b>Dept:</b> CSE</li>
-          <li><b>ID:</b> 257156</li>
-          <li><b>Valid Till:</b> 2029</li>
-          <li><b>Location:</b> Galleria Complex, Sylhet</li>
-        </ul>
-      </div>
-      <div class="glass p-6 rounded-xl shadow-lg">
-        <h4 class="text-lg font-semibold text-blue-800 mb-4">🏢 Work</h4>
-        <ul class="text-gray-800 space-y-2">
-          <li><b>Position:</b> Teacher</li>
-          <li><b>Institute:</b> Sylhet Art & Culture Institute</li>
-          <li><b>Location:</b> Mahmud Complex, Sylhet</li>
-          <li><b><a href="https://goo.gl/maps/YourMapLinkHere" target="_blank" class="text-blue-600 underline">See on Google Maps</a></b></li>
-        </ul>
-      </div>
-    </section>
+    <!-- Threads -->
+    <a href="https://www.threads.net/@mahin0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Threads">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/threads.svg" class="w-6 h-6" alt="Threads">
+    </a>
 
-    <!-- MOTIVATIONAL QUOTE -->
-    <section class="glass p-6 rounded-xl shadow-lg mb-12 text-center">
-      <p class="italic text-gray-700">“Education is the passport to the future, for tomorrow belongs to those who prepare for it today.”</p>
-      <p class="mt-3 font-semibold text-blue-900">— Malcolm X</p>
-    </section>
-  </main>
+    <!-- WhatsApp -->
+    <a href="https://wa.me/8801770756964" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="WhatsApp">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" class="w-6 h-6" alt="WhatsApp">
+    </a>
 
-  <!-- FOOTER + QR -->
-  <footer class="w-full py-6 text-center text-sm text-gray-500 relative">
-    <p>© 2025 Mahin Rahman. All Rights Reserved.</p>
-    <img src="https://api.qrserver.com/v1/create-qr-code/?size=100x100&data=https://github.com/mahin0o0" alt="QR to GitHub"
-         class="absolute right-4 bottom-4 w-20 h-20 glass p-2 rounded-lg hidden md:block"/>
-  </footer>
+    <!-- Email -->
+    <a href="mailto:mahinrahman13140@gmail.com" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Email">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" class="w-6 h-6" alt="Email">
+    </a>
 
-</body>
-</html>
+    <!-- GitHub -->
+    <a href="https://github.com/mahin0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="GitHub">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" class="w-6 h-6" alt="GitHub">
+    </a>
+
+  </div>
+</section>
