--- a/index.html
+++ b/index.html
@@ -1,52 +1,174 @@
-<!-- SOCIAL ICONS (Clean, Responsive, Official) -->
-<section class="text-center mb-8">
-  <h3 class="text-xl font-semibold text-blue-700 mb-4">Find Me Online</h3>
-  <div class="flex flex-wrap justify-center gap-4">
-    
-    <!-- Facebook Profile -->
-    <a href="https://facebook.com/mahin.rahman.757258" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Facebook">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" class="w-6 h-6" alt="Facebook">
-    </a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mahin Rahman - Personal Info</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #1864ab;
+      --secondary: #e9ecef;
+      --text: #212529;
+      --bg: #f8fafc;
+      --radius: 16px;
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Inter', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 820px;
+      margin: 40px auto;
+      padding: 24px;
+      background: #fff;
+      border-radius: var(--radius);
+      box-shadow: 0 0 20px rgba(0,0,0,0.06);
+      scroll-behavior: smooth;
+    }
+    h1 {
+      font-size: 2.5rem;
+      color: var(--primary);
+      text-align: center;
+      margin-bottom: 16px;
+      cursor: pointer;
+    }
+    .bio {
+      text-align: center;
+      margin-bottom: 30px;
+      color: #444;
+      font-size: 1.1rem;
+    }
+    .info-card {
+      background: var(--secondary);
+      border-radius: var(--radius);
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.04);
+    }
+    .info-card h3 {
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+      color: var(--primary);
+    }
+    .info-list li {
+      margin-bottom: 8px;
+    }
+    .info-list b {
+      color: #14395b;
+    }
+    .social-icons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 8px;
+      margin-top: 24px;
+    }
+    .social-icons a {
+      width: 32px;
+      height: 32px;
+      background: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+      transition: transform 0.2s ease;
+    }
+    .social-icons a:hover {
+      transform: scale(1.1);
+    }
+    .social-icons img {
+      width: 16px;
+      height: 16px;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
+      margin-top: 30px;
+    }
+    .language-toggle {
+      position: fixed;
+      top: 16px;
+      right: 16px;
+      font-size: 0.9rem;
+      background: #fff;
+      border-radius: 6px;
+      padding: 6px 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      cursor: pointer;
+    }
+    .section {
+      margin-bottom: 40px;
+    }
+    html.smooth-scroll {
+      scroll-behavior: smooth;
+    }
+  </style>
+</head>
+<body>
+  <div class="language-toggle" onclick="toggleLanguage()">বাংলা</div>
+  <div class="container">
+    <h1 onclick="document.getElementById('main').scrollIntoView({ behavior: 'smooth' });">Mahin Rahman</h1>
+    <div class="bio" id="main">Computer Science student & digital teacher at Sylhet. Passionate about technology, design, and education.</div>
 
-    <!-- Facebook Page -->
-    <a href="https://www.facebook.com/share/1ZFyeuJF3G/" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Facebook Page">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" class="w-6 h-6" alt="FB Page">
-    </a>
+    <div class="section info-card">
+      <h3>🎓 Student Info</h3>
+      <ul class="info-list">
+        <li><b>Institute:</b> <a href="http://www.headway.edu.bd" target="_blank">Headway Engineering Institute</a></li>
+        <li><b>Dept:</b> Computer Science and Technology</li>
+        <li><b>ID:</b> 257156</li>
+        <li><b>Valid Till:</b> 2029</li>
+        <li><b>Location:</b> Galleria Complex (7th floor), Zindabazar, Sylhet</li>
+      </ul>
+    </div>
 
-    <!-- Instagram -->
-    <a href="https://instagram.com/mahin0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Instagram">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" class="w-6 h-6" alt="Instagram">
-    </a>
+    <div class="section info-card">
+      <h3>🏢 Work Info</h3>
+      <ul class="info-list">
+        <li><b>Profession:</b> Teacher</li>
+        <li><b>Institute:</b> Sylhet Art and Culture Institute</li>
+        <li><b>Location:</b> Mahmud Complex, 3rd floor, Sylhet</li>
+      </ul>
+    </div>
 
-    <!-- TikTok -->
-    <a href="https://tiktok.com/@mahin0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="TikTok">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" class="w-6 h-6" alt="TikTok">
-    </a>
+    <section class="section social-icons">
+      <a href="https://facebook.com/mahin.rahman.757258" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook"></a>
+      <a href="https://www.facebook.com/share/1ZFyeuJF3G/" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="FB Page"></a>
+      <a href="https://instagram.com/mahin0o0" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram"></a>
+      <a href="https://tiktok.com/@mahin0o0" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" alt="TikTok"></a>
+      <a href="https://www.youtube.com/@MahinRahman0o0" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" alt="YouTube"></a>
+      <a href="https://www.threads.net/@mahin0o0" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/threads.svg" alt="Threads"></a>
+      <a href="https://wa.me/8801770756964" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" alt="WhatsApp"></a>
+      <a href="mailto:mahinrahman13140@gmail.com"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" alt="Email"></a>
+      <a href="https://github.com/mahin0o0" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub"></a>
+    </section>
 
-    <!-- YouTube -->
-    <a href="https://www.youtube.com/@MahinRahman0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="YouTube">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" class="w-6 h-6" alt="YouTube">
-    </a>
-
-    <!-- Threads -->
-    <a href="https://www.threads.net/@mahin0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Threads">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/threads.svg" class="w-6 h-6" alt="Threads">
-    </a>
-
-    <!-- WhatsApp -->
-    <a href="https://wa.me/8801770756964" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="WhatsApp">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" class="w-6 h-6" alt="WhatsApp">
-    </a>
-
-    <!-- Email -->
-    <a href="mailto:mahinrahman13140@gmail.com" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="Email">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" class="w-6 h-6" alt="Email">
-    </a>
-
-    <!-- GitHub -->
-    <a href="https://github.com/mahin0o0" target="_blank" class="p-3 bg-white rounded-full shadow hover:scale-110 transition" aria-label="GitHub">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" class="w-6 h-6" alt="GitHub">
-    </a>
-
+    <footer>© 2025 Mahin Rahman. All rights reserved.</footer>
   </div>
-</section>
+
+  <script>
+    function toggleLanguage() {
+      const bio = document.querySelector('.bio');
+      const toggleBtn = document.querySelector('.language-toggle');
+      if (toggleBtn.innerText === 'বাংলা') {
+        bio.innerText = 'কম্পিউটার সায়েন্স ছাত্র ও ডিজিটাল শিক্ষক (সিলেট)। প্রযুক্তি, ডিজাইন ও শিক্ষায় আগ্রহী।';
+        toggleBtn.innerText = 'English';
+      } else {
+        bio.innerText = 'Computer Science student & digital teacher at Sylhet. Passionate about technology, design, and education.';
+        toggleBtn.innerText = 'বাংলা';
+      }
+    }
+  </script>
+</body>
+</html>
