--- a/index.html
+++ b/index.html
@@ -7,48 +7,58 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <img src="profile.jpg" alt="Mahin Rahman" class="profile-pic" />
-    <h1>Mahin Rahman</h1>
-    <p>Student | Computer Science & Technology</p>
-  </header>
+  <div class="container">
+    <aside class="sidebar">
+      <img src="profile.jpg" alt="Mahin Rahman" class="profile-pic">
+      <h1>Mahin Rahman</h1>
+      <p>Computer Science Student</p>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#social">Social</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </aside>
 
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Hi! I am Mahin Rahman, a passionate Computer Science and Technology student at Headway Engineering Institute, Sylhet. I love working with digital identity, websites, and technology. I am the creator of my personal digital card and information site.</p>
-    </section>
+    <main class="content">
+      <section id="about">
+        <h2>About Me</h2>
+        <p>I am Mahin Rahman, a student of Computer Science and Technology at Headway Engineering Institute, Sylhet. I love learning new technologies and building my own digital identity. I designed and built my own personal information site.</p>
+      </section>
 
-    <section id="education">
-      <h2>Education</h2>
-      <p><strong>Institute:</strong> Headway Engineering Institute, Sylhet</p>
-      <p><strong>Department:</strong> Computer Science & Technology</p>
-      <p><strong>Status:</strong> Ongoing Diploma Student</p>
-    </section>
+      <section id="education">
+        <h2>Education</h2>
+        <p><strong>Institute:</strong> Headway Engineering Institute, Sylhet</p>
+        <p><strong>Department:</strong> Computer Science & Technology</p>
+        <p><strong>Status:</strong> Diploma (Ongoing)</p>
+      </section>
 
-    <section id="social">
-      <h2>Social Links</h2>
-      <ul class="social-icons">
-        <li><a href="https://www.facebook.com/share/167HMiKwGM/" target="_blank">Facebook</a></li>
-        <li><a href="https://www.instagram.com/mahin0o0/profilecard/?igsh=MWI0ZXk1ejJjaTM2bw==" target="_blank">Instagram</a></li>
-        <li><a href="https://www.tiktok.com/@mahin0o0?_t=ZS-8w4GhTuUH4c&_r=1" target="_blank">TikTok</a></li>
-        <li><a href="https://www.threads.net/@mahin0o0" target="_blank">Threads</a></li>
-        <li><a href="https://www.youtube.com/@Mahin.0o0" target="_blank">YouTube</a></li>
-        <li><a href="https://wa.me/8801770756964" target="_blank">WhatsApp</a></li>
-        <li><a href="mailto:mahinrahman13140@gmail.com">Email</a></li>
-        <li><a href="https://github.com/mahin0o0" target="_blank">GitHub</a></li>
-      </ul>
-    </section>
+      <section id="social">
+        <h2>Social Media</h2>
+        <ul>
+          <li><a href="https://www.facebook.com/share/167HMiKwGM/" target="_blank">Facebook</a></li>
+          <li><a href="https://www.instagram.com/mahin0o0/profilecard/?igsh=MWI0ZXk1ejJjaTM2bw==" target="_blank">Instagram</a></li>
+          <li><a href="https://www.tiktok.com/@mahin0o0?_t=ZS-8w4GhTuUH4c&_r=1" target="_blank">TikTok</a></li>
+          <li><a href="https://www.threads.net/@mahin0o0" target="_blank">Threads</a></li>
+          <li><a href="https://www.youtube.com/@Mahin.0o0" target="_blank">YouTube</a></li>
+          <li><a href="https://wa.me/8801770756964" target="_blank">WhatsApp</a></li>
+          <li><a href="mailto:mahinrahman13140@gmail.com">Email</a></li>
+          <li><a href="https://github.com/mahin0o0" target="_blank">GitHub</a></li>
+        </ul>
+      </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:mahinrahman13140@gmail.com">mahinrahman13140@gmail.com</a></p>
-      <p>Phone: <a href="tel:+8801770756964">+8801770756964</a></p>
-    </section>
-  </main>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:mahinrahman13140@gmail.com">mahinrahman13140@gmail.com</a></p>
+        <p>Phone: <a href="tel:+8801770756964">+8801770756964</a></p>
+      </section>
 
-  <footer>
-    <p>&copy; 2025 Mahin Rahman. All rights reserved.</p>
-  </footer>
+      <footer>
+        <p>&copy; 2025 Mahin Rahman. All rights reserved.</p>
+      </footer>
+    </main>
+  </div>
 </body>
 </html>
